fix: removed pre padding to avoid line number overflow

--- a/assets/css/_code.scss
+++ b/assets/css/_code.scss
@@ -73,7 +73,6 @@ pre,
 
 pre {
   margin: 0;
-  padding: .25rem 0 .25rem .5rem;
 
   @include tab-size(4);
 
